src/styles/index.css
:root {
  --button-shadow-color: #b80220;
}

#app, .text, .button, .asset {
  touch-action: manipulation;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
}

body {
  background-color: #2B2D42;
  color: #EDF2F4;
  font-family: 'Helvetica', 'Arial', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0;
}

#app {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 360px;
  margin: 0 auto;
  height: 100dvh;
  gap: 30px;
}

.text {
  font-size: 30px;
  text-align: center;
  user-select: none;
  height: 74px;
  margin-block: 0;
  text-wrap: balance;
}

.button {
  background: none repeat scroll 0 0 #d71e34;
  border-radius: 50%;
  box-shadow: 0 10px var(--button-shadow-color);
  width: 150px;
  height: 150px;
  border: 0px;
  cursor: pointer;
  outline: none;
  user-select: none;

  &:hover {
    box-shadow: 0px 5px var(--button-shadow-color);
    transform: translateY(2px);
  }

  &:active{
    box-shadow: 0px 0px var(--button-shadow-color);
    transform: translateY(5px);
  }
}

.asset {
  width: 320px;
  height: 240px;
  display: flex;
  justify-content: center;

  img {
    cursor: pointer;
  }

  img, video {
    object-fit: contain;
    max-width: 100%;
    max-height: 100%;
  }
}

@media screen and (max-width: 600px) {
  .text {
    font-size: 24px;
  }
}

